# holded-tt

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.xml
.github/workflows/: cd.yml  ci.yml  release.yml
docs/superpowers/plans/: 2026-04-28-holidays-command.md
docs/superpowers/specs/: 2025-07-16-timeoff-command-design.md  2026-04-28-holidays-command-design.md
src/holded_cli/: auth.py  cli.py  config.py  console.py  dates.py  errors.py  exit_codes.py  holded_client.py  holidays.py  paths.py  session.py  state.py
src/holded_cli/commands/: __init__.py  clock.py  config.py  employee.py  employees.py  export.py  login.py  session.py  track.py  workplaces.py
src/holded_tt/: __init__.py  auth.py  cli.py  config.py  console.py  dates.py  errors.py  holded_client.py  holidays.py  paths.py  renderers.py  session.py  state.py  timeoff.py
src/holded_tt/commands/: __init__.py  clock.py  config.py  employee.py  employees.py  export.py  holidays.py  login.py  session.py  timeoff.py  track.py  workplaces.py
src/holded_tt_cli/: auth.py  cli.py  config.py  console.py  dates.py  errors.py  holded_client.py  holidays.py  session.py  state.py
src/holded_tt_cli/commands/: __init__.py  clock.py  config.py  employee.py  employees.py  export.py  login.py  session.py  track.py  workplaces.py
tests/: conftest.py  test_auth_core.py  test_cli_surface.py  test_clock_command.py  test_clock_helpers.py  test_dates.py  test_employee_command.py  test_employees_command.py  test_export_command.py  test_holded_client.py  test_holidays.py  test_holidays_command.py  test_login_command.py  test_output_contract.py  test_package_metadata.py  test_runtime_storage.py  test_session_command.py  test_timeoff.py  test_timeoff_command.py  test_track_command.py  test_workplaces_command.py
