[project]
name = "holded-tt-cli"
version = "0.1.0"
description = "CLI tool for automating time tracking on Holded"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.28",
    "rich>=13.0",
    "platformdirs>=4.2",
    "tomli-w>=1.1",
    "tzdata>=2024.1",
    "openpyxl>=3.1.5",
]

[project.scripts]
holded-tt = "holded_tt_cli.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/holded_tt_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "tzdata>=2026.1",
]
